# tMath

./: .gitignore  CMakeLists.txt
NoIdea/: CMakeLists.txt  NoIdea.sln
NoIdea/NoIdea/: NoIdea.vcxproj  main.cpp
NoIdea/src/: main.cpp
ctest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  tMath.sln  tMath.vcxproj  tMath.vcxproj.filters
include/: numbertheory.hpp
src/: main.cpp  numbertheory.cpp
